Fix: 지도 z-index 수정

--- a/src/pages/map/styles/likedpharmacy.module.scss
+++ b/src/pages/map/styles/likedpharmacy.module.scss
@@ -13,7 +13,7 @@
 	align-items: flex-end;
 	justify-content: center;
 	pointer-events: none;
-	z-index: 1000;
+	z-index: 100;
 }
 
 .modal {
